<resources>
    <string name="app_name">Movies</string>
    <string name="msg_error">An error has occurred</string>

    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>


    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="nav_tv_shows">TV Shows</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_people">People</string>

    <string name="detail_popularity">Popularity:</string>
    <string name="detail_original_language">Original Language:</string>
    <string name="detail_genres">Genres:</string>
    <string name="detail_release_date">Release date:</string>
    <string name="detail_rating">Rating:</string>

    <string name="cd_backdrop_image">Backdrop image</string>
    <string name="cd_trailer_thumbnail">trailer thumbnail</string>
    <string name="cd_play_button_icon">play button icon</string>
    <string name="cd_poster_image">poster image</string>
    <string name="cd_movie_portrait">movie portrait</string>
    <string name="cd_application_logo">application logo</string>

    <string name="feedback_email">lars.dahl@gmail.com</string>
    <string name="search_hint">search…</string>
    <string name="title_now_playing">Cinema</string>

    <string name="bnav_lists">Lists</string>
    <string name="bnav_filter">Filter</string>
    <string name="bnav_favorites">Favorites</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="filter_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="filter_order_by">
        <item>Title</item>
        <item>Popularity</item>
        <item>Rating</item>
        <item>Release date</item>
        <item>Revenue</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_adult">Allow adult content</string>
    <string name="pref_summary_adult">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_summary_login">Use official login</string>
    <string name="pref_title_login">Use login</string>
    <string name="detail_adult">Adult</string>
    <string name="tv_order_by">Order by</string>
    <string name="transition_portrait">transition_portrait</string>
    <string name="pk_access_token">pk_access_token</string>
    <string name="pk_request_token_v4">pk_request_token_v4</string>
    <string name="pk_request_token_v3">pk_request_token_v3</string>
    <string name="pk_request_token_v3_expires">pk_request_token_v3_expires</string>
    <string name="pk_account_id">pk_account_id</string>
    <string name="pk_session_id">pk_session_id</string>
    <string name="bnav_watchlist">Watchlist</string>
    <string name="bnav_rated">Rated</string>
    <string name="delete">Delete</string>
    <string name="dialog_btn_rate">Rate</string>
    <string name="dialog_title_rate">Rate</string>
    <string name="rating_successful">Rating updated</string>
    <string name="rating_deleted">Rating removed</string>
    <string name="bookmark_added">Added to watchlist</string>
    <string name="bookmark_removed">Removed from watchlist</string>
    <string name="favorite_added">Added to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>
    <string name="bnav_details">Details</string>
    <string name="bnav_reviews">Reviews</string>
    <string name="bnav_similar">Similar</string>
    <string name="bnav_recommended">Recommended</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
