<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="no.ezet.fasttrack.popularmovies.view.MovieDetailFragment">

    <data>
        <variable
            name="movie"
            type="no.ezet.fasttrack.popularmovies.model.Movie" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="@dimen/text_margin">

        <ImageView
            android:id="@+id/movie_portrait"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/cd_movie_portrait"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/movie_portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:text="@string/detail_release_date" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{movie.releaseDate}"
                    tools:text="24.10.1985" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:text="@string/detail_rating" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(safeUnbox(movie.voteAverage))}"
                    tools:text="5.0" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{" (" + String.valueOf(safeUnbox(movie.voteCount)) + " votes)"}'
                    tools:text="5.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:text="@string/detail_popularity" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(safeUnbox(movie.popularity))}"
                    tools:text="5.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:text="@string/detail_original_language" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{movie.originalLanguage}"
                    tools:text="English" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_overview"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@{movie.overview}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_portrait"
            tools:text="@tools:sample/lorem" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
            tools:listitem="@layout/trailer_list_item"
            tools:orientation="horizontal" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailer_list"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/review_list_item" />

    </android.support.constraint.ConstraintLayout>


</layout>